# RelaySaas

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  MULTI_TENANT_SETUP.md  README.md  STRIPE_DEPLOYMENT_GUIDE.md  STRIPE_PRODUCTS_SETUP.md  pyproject.toml  requirements.txt  supabase_system_config.sql
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/public/: robots.txt
dashboard/src/: App.jsx  index.css  main.jsx
docs/: SCALING_WORKER_POOL.md
scripts/: run_migration.py
src/: __init__.py  config.py  main.py  signal_router.py
src/api/: __init__.py  admin_routes.py  mt_accounts_routes.py  onboarding_routes.py  plans_routes.py  routes.py  server.py  stripe_routes.py  websocket.py
src/auth/: __init__.py  middleware.py  models.py
src/database/: __init__.py  crud.py  database.py  models.py  supabase.py  supabase_crud.py
src/parser/: __init__.py  llm_parser.py  models.py  prompts.py
src/telegram/: __init__.py  client.py  listener.py
src/trading/: __init__.py  executor.py  validator.py
src/users/: __init__.py  credentials.py  manager.py  mt_accounts.py
src/utils/: __init__.py  events.py  logger.py
supabase/: config.toml
supabase/migrations/: 001_multi_tenant_schema.sql  002_system_config.sql  002_update_subscription_tiers.sql  003_plans_functions.sql  003_system_user.sql  004_setup_daily_reset_cron.sql  005_add_tp_lot_mode.sql  006_fix_rls_infinite_recursion.sql  007_add_dismissed_column.sql  008_add_admin_notes.sql  (+2 more)
tests/: sample_signals.py  test_parser.py  test_validator.py
(+88 files in other folders)
